# weight-tracker

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml  weekly_view.html  weeks_filter.html
.github/workflows/: backend_ci.yaml  backend_code_quality.yaml  backend_testing.yaml
app/: .env.example  .gitignore  analytics.py  api.py  app.py  data_integration.py  data_storage_file.py  db_storage.py  demo.py  file_storage.py  gfit_auth.py  google_fit.py  main.py  mfp.py  project_types.py  test_analytics.py  test_api.py  test_data_integration.py  test_file_storage.py  test_google_fit.py  test_mfp.py  test_utils.py  utils.py
app/demo/: demo_raw_gfit_data.json  demo_seed_storage.json
app/static/stylesheets/: reset.css  style.css
app/templates/: tracker.html
doc/: architecture.excalidraw  architecture_backend.excalidraw  architecture_high_level.excalidraw  ci_cd_flow.excalidraw
fastapi-backend/: analytics.py  api.py  file_storage.py  google_fit.py  main.py  mfp.py  project_types.py  utils.py
static/: style.css
static_frontend/: weeks_filter.html
tests/backend/: test_analytics.py  test_api.py  test_data_integration.py  test_file_storage.py  test_google_fit.py  test_mfp.py  test_utils.py
tests/backend/integration/: test_demo_mode.py  test_get_data.py  test_health.py  test_manage_data.py  test_sync_data.py
tests/backend/unit/: conftest.py  test_analytics.py  test_api.py  test_data_integration.py  test_db_storage.py  test_file_storage.py  test_google_fit.py  test_mfp.py  test_utils.py
ui-react/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
ui-react/src/: App.tsx  index.css  supabaseClient.ts  utils.ts
ui-react/src/components/: AddDataModal.tsx  Authentication.tsx  DailyDataTable.tsx  DatesFilter.tsx  Filters.tsx  GetDataCTA.tsx  GetDataSelection.tsx  Header.tsx  Login.tsx  Main.tsx  ManageDataCTA.tsx  NoDataView.tsx  SignUp.tsx  Summary.tsx  Toast.tsx  WeeklyDataChart.tsx  WeeklyDataCharts.tsx  WeeklyDataTable.tsx  WeeksFilter.tsx
ui-react/src/types/: daily-table.ts  filter.ts  goal.ts  props.ts  summary.ts  svg.d.ts  toast.ts  user.ts  utils.ts  weekly-charts.ts  weekly-table.ts  weekly_table.ts  weight-entry.ts  weight_entry.ts
