[tool.poetry]
name = "weight-tracker"
version = "0.1.0"
package-mode = false
description = "Weight Tracker app"
authors = ["Justas Zieminykas <justaxsz@gmail.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-auth = "^2.38.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.167.0"
pandas = "^2.2.3"
uvicorn = "^0.35.0"
httpx = "^0.28.1"
python-dotenv = "^1.1.1"
fastapi = "^0.117.1"
itsdangerous = "^2.2.0"
sqlmodel = "^0.0.25"
psycopg2-binary = "^2.9.10"
supabase = "^2.23.3"


[tool.mypy]
mypy_path = "."
packages = ["app"]
namespace_packages = true
explicit_package_bases = true
exclude = [
    "app/throwaway/",
    "app/auth/",
    "app/data/",
    "app/_pycache__/",
    "venv/",
    ".venv/",
    "tests/",
    "mfp.py",
    "app/demo.py",
]

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.3.0.250703"
google-auth-stubs = "^0.3.0"
google-api-python-client-stubs = "^1.30.0"
ruff = "^0.12.11"
black = "^25.1.0"
mypy = "^1.17.1"
ipykernel = "^6.29.5"
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ['app']

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF", # Ruff-specific
]
exclude = [
    "./app/throwaway",
    "app/data",
    "app/auth",
    "app/_pycache__",
    "tests/*"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath =["."]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
omit = [
  "tests/*",
  "app/project_types.py",
  "app/main.py",
  "app/throwaway/*",
  "app/mfp.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
